# rendertoy

./: Cargo.toml
ash-imgui/: Cargo.toml
ash-imgui/src/: lib.rs
assets/shaders/: bindless.inc  color.inc  random.inl  sampling.inc  view_constants.inc
lib/gl/: Cargo.toml  build.rs
src/: blit.txt  blob.rs  buffer.rs  camera.rs  compile_shaders.cmd  compute_tex_macro.rs  consts.rs  copy_image.hlsl  copy_image.spv  dot.rs  final_blit.hlsl  final_blit.spv  gpu_debugger.rs  gpu_profiler.rs  gui.rs  keyboard.rs  lib.rs  mesh.rs  package.rs  renderer.rs  rendertoy.rs  rgb9e5.rs  rt.rs  shader.rs  switchable_graphics.rs  texture.rs  viewport.rs  vk_backend_state.rs  vk_render_device.rs  vulkan.rs  warnings.rs
src/backend/: buffer.rs  draw.rs  file.rs  mod.rs  opengl.rs  render_buffer.rs  shader.rs  texture.rs  transient_resource.rs
