[package]
name = "rendertoy"
version = "0.1.0"
authors = ["Tomasz Stachowiak"]
edition = "2018"

[dependencies]
failure = "0.1"
snoozy = { git = "https://github.com/h3r2tic/snoozy" }
snoozy-macros = { git = "https://github.com/h3r2tic/snoozy-macros" }
shader-prepper = "0.2"
regex = "1.3"
notify = "4.0"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.2"
glutin = "0.19"
gl = { path = "lib/gl" }
image = "0.22"
hdrldr = "0.1.2"
relative-path = "1.0"
cargo = "0.39"
clap = "2.33"
nalgebra = { version = "0.18",  features = ["serde-serialize"] }
libflate = "0.1"
typemap = "0.3"
abomonation = "0.7"
abomonation_derive = "0.5"
nanovg = { version = "1.0", features = ["gl3"] }
gltf = "0.14"