[package]
name = "rendertoy"
version = "0.1.0"
authors = ["Tomasz Stachowiak"]
edition = "2018"

[dependencies]
failure = "0.1"
snoozy = { git = "https://github.com/h3r2tic/snoozy" }
snoozy-macros = { git = "https://github.com/h3r2tic/snoozy-macros" }
shader-prepper = "0.2"
regex = "1.3"
notify = "4.0"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.2"
image = { version = "0.22", default-features = false, features = ["gif_codec", "jpeg", "ico", "png_codec", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt"] }
hdrldr = "0.1.2"
relative-path = "1.0"
cargo_metadata = "0.9"
clap = "2.33"
nalgebra = { version = "0.18",  features = ["serde-serialize"] }
libflate = "0.1"
typemap = "0.3"
abomonation = "0.7"
abomonation_derive = "0.5"
gltf = "0.14"
tokio = "0.2.0-alpha.6"

winit = "0.19.5"
ash-window = { git = "https://github.com/norse-rs/ash-window.git", revision = "9b6ab4d03b015ecae8ec9c771461e80446487ad4" }
ash = "0.29.0"
vk-sync = "0.1.6"
shaderc = "0.6.1"