[package]
name = "rendertoy"
version = "0.1.0"
authors = ["Tomasz Stachowiak"]
edition = "2018"

[dependencies]
abomonation = "0.7"
abomonation_derive = "0.5"
ash = "=0.29.0"
ash-imgui = { path = "ash-imgui" }
ash-window = { git = "https://github.com/norse-rs/ash-window.git", rev = "9b6ab4d03b015ecae8ec9c771461e80446487ad4" }
bincode = "1.2"
cargo_metadata = "0.10"
clap = "2.33"
failure = "0.1"
gltf = "0.15"
hdrldr = "0.1.2"
image = { version = "0.22", default-features = false, features = ["gif_codec", "jpeg", "ico", "png_codec", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt"] }
imgui = { git = "https://github.com/Gekkio/imgui-rs.git", rev = "ffff82d" }
imgui-winit-support = { git = "https://github.com/Gekkio/imgui-rs.git", rev = "ffff82d", features = ["winit-19"] }
lazy_static = "1.4"
libflate = "1.0"
glam = { version = "0.8.7", features = ["serde"] }
notify = "4.0"
petgraph = "0.4.13"
regex = "1.3"
relative-path = "1.2"
rpmalloc = "0.2.0"
rspirv = "0.6.0"
serde = "1.0"
serde_derive = "1.0"
shader-prepper = "0.2"
shaderc = "0.6.2"
snoozy = { git = "https://github.com/h3r2tic/snoozy" }
snoozy-macros = { git = "https://github.com/h3r2tic/snoozy-macros" }
spirv_headers = "=1.4.2"
spirv-reflect = "0.2.3"
tokio = { version = "0.2.1", features = ["rt-core", "rt-threaded"] }
#tokio = { version = "0.2.1", features = ["rt-core"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt"] }
typemap = "0.3"
vk-mem = "=0.2.0"
vk-sync = "0.1.6"
winit = "=0.19.5"

[patch.crates-io]
ash = { git = "https://github.com/MaikKlein/ash.git", rev = "0b68927" }
spirv-reflect = { git = "https://github.com/h3r2tic/spirv-reflect-rs.git" }  # Fixed a crash
vk-mem = { git = "https://github.com/h3r2tic/vk-mem-rs.git" }  # Forked for static CRT on Windows
